# paintings

./: .gitignore  README.md  package.json
client/: README.md  package.json
client/public/: index.html  manifest.json  out.css
client/src/: AboutJamesGordaneer.tsx  AdminPage.tsx  AdoptionForm.tsx  AdoptionsAreCurrentlyClosed.tsx  AfterAdoption.tsx  App.css  App.tsx  AppFooter.tsx  ArchiveBiographyPage.tsx  ArchiveGallery.tsx  ArchiveLandingPage.tsx  ArchivePaintingDetailPage.tsx  ArchivePaintingLightbox.tsx  ArchiveSiteComingSoon.tsx  ArtConservators.tsx  FAQs.tsx  (+49 more)
etl/: .gitignore  README.md  pyproject.toml
etl/extract/: check_archive_s3_images.py  check_images_have_descriptions.py  clean_legacy_batch.py  create_back_photo_mapping.py  create_gelato_cards.py  download_convert_archive_images.py  download_s3_images.py  extract_2023_session_paintings.py  extract_front_photos_only.py  find_duplicate_images.py  lowercase_filenames.py  paintings_to_csv.py  process_2021_batch.py  process_legacy_batch.py  process_summer_2023_batch.py  pyproject.toml  rename_archive_paintings.py  rename_painting_images.py  res.json  utils.py  validate_images.py
etl/ingest/: airtable_ingest.py  indicate_back_photo_exists_in_airtable.py  indicate_missing_back_images_in_airtable.py  ingest_back_photos.py  ingest_to_jg_airtable.py  rename_back_photos.py  rename_photos_from_csv.py
etl/transform/: bad_pairs.txt  duplicate_pairs.txt  mark_bad_duplicates_in_airtable.py
public/: index.html  manifest.json
src/: App.css  App.tsx  PhotoGallery.tsx  index.css  index.tsx  types.ts  usePaintings.ts
(+38 files in other folders)
